--- a/JQuery/JQueryExampleN05/index.html
+++ b/JQuery/JQueryExampleN05/index.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<script type="text/javascript" src="src/main/webapp/js/jquery-1.7.1.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.js"></script>
 		<style type="text/css">			
 
 		</style>
